--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ nav {
 .audio-preview {
   margin-top: 60px;
   padding-top: 30px;
-  border-top: 1px solid rgba(255,255,255,0.15);
+  border-bottom: 1px solid rgba(255,255,255,0.15);
 }
 
 .audio-label {
